--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default col-lg-12">
+<nav class="navbar navbar-default col-md-12">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">JobTracker</a>
     <ul class="nav navbar-nav">
