--- a/client/app/navbar/navbar.html
+++ b/client/app/navbar/navbar.html
@@ -2,9 +2,9 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="#">JobTracker</a>
     <ul class="nav navbar-nav">
-      <li><a href="#">My Profile</a></li>
-      <li class="active"><a href="#/mainList">My Jobs<span class="sr-only">(current)</span></a></li>
-      <li><a href="#/stats">My Stats</a></li>
+      <li ng-class="{active: isActive('/')}"><a href="#">My Profile</a></li>
+      <li ng-class="{active: isActive('/mainList')}"><a href="#/mainList">My Jobs</a></li>
+      <li ng-class="{active: isActive('/stats')}"><a href="#/stats">My Stats</a></li>
     </ul>
     <div class="navbar-right">
       <button type="button" class="btn btn-default navbar-btn" ng-click="logout()">Sign out</button>
