--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -21,25 +21,53 @@
   <!-- Add job form -->
   <add-job-dir></add-job-dir>
   <!-- Job list table -->
-     <table class='table'>
-       <thead>
-         <tr>
-           <th class="col-sm-3" ng-click="sortHeader = 'company'; sortReverse = !sortReverse">Company</th>
-           <th class="col-sm-3" ng-click="sortHeader = 'title'; sortReverse = !sortReverse">Title</th>
-           <th class="col-sm-2" ng-click="sortHeader = 'interest'; sortReverse = !sortReverse">Interest</th>
-           <th class="col-sm-2" ng-click="sortHeader = 'status'; sortReverse = !sortReverse">Status</th>
-           <th class="col-sm-1" >Show more</th>
-           <th classs="col-sm-1">Remove job</th>
-         </tr>
-       </thead>
-       <tbody>
+   <table class='table table-striped'>
+    <thead>
+      <tr>
+        <th class="col-sm-3" ng-click="sortHeader = 'company'; sortReverse = !sortReverse">
+          Company
+          <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
+        </th>
+        <th class="col-sm-3" ng-click="sortHeader = 'title'; sortReverse = !sortReverse">
+          Title
+          <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
+        </th>
+        <th class="col-sm-2" ng-click="sortHeader = 'interest'; sortReverse = !sortReverse">
+          Interest
+          <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
+        </th>
+        <th class="col-sm-2" ng-click="sortHeader = 'status'; sortReverse = !sortReverse">
+          Status
+          <span class="glyphicon glyphicon-sort" aria-hidden="true"></span>
+        </th>
+        <th class="col-sm-1">
+          Show more
+        </th>
+        <th classs="col-sm-1">
+          Remove job
+        </th>
+      </tr>
+    </thead>
+      <tbody>
         <tr ng-repeat-start='job in jobs | filter: search | orderBy: sortHeader: sortReverse'>
-          <td editable-text="job.company" onaftersave="editJob(job)">{{ job.company || "--" }}</td>
-          <td editable-text="job.jobTitle" onaftersave="editJob(job)">{{job.jobTitle || "--" }}</td>
-          <td editable-select="job.interestLevel" e-ng-options="s.value for s in interestLevels"
-            onaftersave="editJob(job, $data, 'interestLevel')">{{ showInterestLevel(job) }}</td>
-          <td editable-select="job.status" e-ng-options="s.value for s in statuses"
-            onaftersave="editJob(job, $data, 'status')">{{ showStatus(job) }}</td>
+          <td id='entry' editable-text="job.company" onaftersave="editJob(job)">
+          {{ job.company || "--" }}
+            <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+          </td>
+          <td id='entry' editable-text="job.jobTitle" onaftersave="editJob(job)">
+            {{job.jobTitle || "--" }}
+            <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+          </td>
+          <td id='entry' editable-select="job.interestLevel" e-ng-options="s.value for s in interestLevels"
+            onaftersave="editJob(job, $data, 'interestLevel')">
+              {{ showInterestLevel(job) }}
+              <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+            </td>
+          <td id='entry' editable-select="job.status" e-ng-options="s.value for s in statuses"
+            onaftersave="editJob(job, $data, 'status')">
+              {{ showStatus(job) }}
+              <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+            </td>
           <td><span class="glyphicon glyphicon-eye-open" aria-hidden="true" ng-click="job.more = !job.more; showDate(job)"></span></td>
           <td><span class="glyphicon glyphicon-remove" aria-hidden="true" ng-click="removeJob(job)"></span></td>
         </tr>
