--- a/client/app/mainList/singleJob.html
+++ b/client/app/mainList/singleJob.html
@@ -7,23 +7,33 @@
       <table class="table">
         <tr>
           <th>Location</th>
-          <td editable-text="job.location" onaftersave="editJob(job)">{{ job.location || "--" }}</td>
+          <td id='entry' editable-text="job.location" onaftersave="editJob(job)">{{ job.location || "--" }}
+            <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+          </td>
         </tr>
         <tr>
           <th>Contact person</th>
-          <td editable-text="job.contactPerson" onaftersave="editJob(job)">{{ job.contactPerson || "--" }}</td>
+          <td id='entry' editable-text="job.contactPerson" onaftersave="editJob(job)">{{ job.contactPerson || "--" }}
+            <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+          </td>
         </tr>
         <tr>
           <th>Contact information</th>
-          <td editable-text="job.contactInfo" onaftersave="editJob(job)">{{ job.contactInfo || "--" }}</td>
+          <td id='entry' editable-text="job.contactInfo" onaftersave="editJob(job)">{{ job.contactInfo || "--" }}
+            <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+          </td>
         </tr>
         <tr>
           <th>Link to the job posting</th>
-          <td editable-text="job.jobLink" onaftersave="editJob(job)">{{ job.jobLink || "--" }}</td>
+          <td id='entry' editable-text="job.jobLink" onaftersave="editJob(job)">{{ job.jobLink || "--" }}
+            <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+          </td>
         </tr>
         <tr>
           <th>Date advertised</th>
-          <td editable-date="job.age" onaftersave="showDate(job); editJob(job)">{{ job.niceDateString }}</td>
+          <td id='entry' editable-date="job.age" onaftersave="showDate(job); editJob(job)">{{ job.niceDateString }}
+            <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+          </td>
         </tr>
       </table>
 
@@ -32,11 +42,15 @@
       <table class="table">
         <tr>
           <th>Job description</th>
-          <td editable-textarea="job.description" onaftersave="editJob(job)">{{ job.description || "--" }}</td>
+          <td id='entry' editable-textarea="job.description" onaftersave="editJob(job)">{{ job.description || "--" }}
+            <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+          </td>
         </tr>
         <tr>
           <th>Additional notes</th>
-          <td editable-textarea="job.notes" onaftersave="editJob(job)">{{ job.notes || "--" }}</td>
+          <td id='entry' editable-textarea="job.notes" onaftersave="editJob(job)">{{ job.notes || "--" }}
+            <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
+          </td>
         </tr>
         <tr>
           <th>Upload your resume and cover letter</th>
