--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -1,7 +1,7 @@
 <nav-bar></nav-bar>
 <div class="container-fluid" >
 <!-- Search bar -->
-  <div class="col-sm-12" ng-hide="!openAddJobForm">
+  <div class="col-sm-12" ng-hide="openAddJobForm">
     <div class="row">
 
       <div class="col-sm-2 col-sm-offset-1">
@@ -49,7 +49,7 @@
       </tr>
     </thead>
       <tbody>
-        <tr ng-repeat-start='job in jobs | filter: search | orderBy: sortHeader: sortReverse'>
+        <tr ng-repeat-start='job in pagedData | filter: search | orderBy: sortHeader: sortReverse|limitTo :pageSize'>
           <td id='entry' editable-text="job.company" onaftersave="editJob(job)">
           {{ job.company || "--" }}
             <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
@@ -78,6 +78,9 @@
         </tr>
       </tbody>
     </table>
-    <button id="next" class="btn btn-default" ng-disabled="pageButtonDisabled(1)" ng-click="paginate(1)">Next</button>
-    <button  id="previous"class = "btn btn-default" ng-disabled="pageButtonDisabled(-1)" ng-click="paginate(-1)">Previous</button>&nbsp;&nbsp;
+    <button id="first" class="btn btn-default" ng-disabled="pageButtonDisabled(-1)" ng-click="first()">First</button>&nbsp;
+     <button  id="previous" class = "btn btn-default" ng-disabled="pageButtonDisabled(-1)" ng-click="paginate(-1)">Previous</button>
+     Page {{currentPage}} of {{totalPages}}
+    <button id="next" class="btn btn-default" ng-disabled="pageButtonDisabled(1)" ng-click="paginate(1)">Next</button>&nbsp;
+    <button id="last" class="btn btn-default" ng-disabled="pageButtonDisabled(1)" ng-click="last()">Last</button>
 </div>
