--- a/client/app/mainList/mainList.html
+++ b/client/app/mainList/mainList.html
@@ -58,13 +58,13 @@
             {{job.jobTitle || "--" }}
             <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
           </td>
-          <td id='entry' editable-select="job.interestLevel" e-ng-options="s.value for s in interestLevels"
-            onaftersave="editJob(job, $data, 'interestLevel')">
+          <td id='entry' editable-select="job.interestLevel" e-ng-options="s.value as s.value for s in interestLevels"
+            onaftersave="editJob(job)">
               {{ showInterestLevel(job) }}
               <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
           <td id='entry' editable-select="job.status" e-ng-options="s.value as s.text for s in statuses"
-            onaftersave="editJob(job, $data, 'status')">
+            onaftersave="editJob(job)">
               {{ showStatus(job) }}
               <small><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></small>
             </td>
